ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - http:
        paths:
          - path: /go
            pathType: Prefix
            backend:
              service:
                name: go-app
                port:
                  number: 80
          - path: /node
            pathType: Prefix
            backend:
              service:
                name: node-app
                port:
                  number: 80
